--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.jenkins.ci.backend</groupId>
   <artifactId>backend-war-size-tracker</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
   <name>Jenkins WAR Size Tracker</name>
   <url>https://wiki.jenkins-ci.org/display/JENKINS/Jenkins+WAR+Size+Tracker</url>
